--- a/src/components/header/header.html
+++ b/src/components/header/header.html
@@ -1,9 +1,20 @@
-<ion-navbar [color]="toolBarColor">
+
+
+
+
+<ion-navbar  text-center>
 
   <button ion-button menuToggle>
-    <ion-icon name="menu"></ion-icon>
+    <ion-icon name="menu">
+    	
+    </ion-icon>
   </button>
-  <ion-title style="color:beige">{{pageTitle}}</ion-title>
+  <ion-toolbar [style.height]="ios?'50px':''">
 
+  <ion-title  style=" width:100%;padding-right:10%;display:inline-block;" [style.margin-top]="ios?'10px':''">
+        <h3 style="color:#F84838;display:inline-block;font-weight:bold;font-size:1.4rem">FAST</h3>
+        <h3 style="color:black;display:inline-block;font-weight:bold;font-size:1.4rem"> FORWARD</h3>
+      </ion-title>
+</ion-toolbar>
 </ion-navbar>
 <!-- <p> hello </p> -->
