--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -1,5 +1,5 @@
 page-profile {
-
+background: #eff0f1;
 
     .item-profile {
 		width: 100%;
@@ -10,7 +10,7 @@ page-profile {
 
 	.item-detail {
 		width: 100%;
-		background: white;
+		background: #eff0f1;
 		position: absolute;
 	}
 
