--- a/src/pages/academic-signup/academic-signup.scss
+++ b/src/pages/academic-signup/academic-signup.scss
@@ -1,5 +1,10 @@
 page-academic-signup {
-
+.scroll-content{
+    background: url("../assets/images/background-imageCLEAN.jpg") no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+}   
     .select-md .select-placeholder {
         color: #C9C9C9;
     }
@@ -11,7 +16,7 @@ page-academic-signup {
     }
 
     ion-label{ 
-        color:#909090; 
+        color:black; 
         padding-left: 0.9rem; 
         margin:0 !important ;
     
