--- a/src/pages/registerform/registerform.scss
+++ b/src/pages/registerform/registerform.scss
@@ -1,4 +1,11 @@
 page-registerform {
+.scroll-content{
+    background: url("../assets/images/background-imageCLEAN.jpg") no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+}
+
 .datetime-text:empty:not(:focus):before{
     content: "Click to Select" ; 
     color: #AAAAAA
@@ -8,7 +15,7 @@ ion-datetime button{
     height: auto !important;
 }
 ion-label{ 
-    color:#909090; 
+    color:black; 
     padding-left: 0.9rem; 
     margin:0 !important ;
 
