Anany's Latest Changes before upload

--- a/src/components/header/header.html
+++ b/src/components/header/header.html
@@ -11,7 +11,7 @@
   </button>
   <ion-toolbar [style.height]="ios?'50px':''">
 
-  <ion-title  style=" width:100%;padding-right:10%;display:inline-block;" [style.margin-top]="ios?'10px':''">
+  <ion-title  style=" width:100%;display:inline-block;" [style.margin-top]="ios?'10px':''">
         <h3 style="color:#F84838;display:inline-block;font-weight:bold;font-size:1.4rem">FAST</h3>
         <h3 style="color:black;display:inline-block;font-weight:bold;font-size:1.4rem"> FORWARD</h3>
       </ion-title>
