Revert "Anany's Latest Changes before upload"
This reverts commit 2836d554b9a09a660af3d36fac784b9069d7d339.

--- a/src/components/media-sample-item/media-sample-item.html
+++ b/src/components/media-sample-item/media-sample-item.html
@@ -2,7 +2,7 @@
   <div class="img-container">
     <img [src]="mediaSample.preview_url"/>
     <img class="play-indicator" 
-      src='http://www.fastforwardsim.com/arrow/play.png' />
+      src='../assets/images/play.png' />
   </div>
   <!-- 
   <ion-list>
