--- a/src/pages/universities/universities.scss
+++ b/src/pages/universities/universities.scss
@@ -1,20 +1,14 @@
 page-universities {
 background: #eff0f1;
-
+.left{ 
+    padding: 1rem 0 0 1rem ;
+    float: left;
+}
 .lastRow{ 
     padding-bottom: 1rem; 
 }
 .title{ 
     font-weight: bold ; 
-    
-}
-}
-
-.ios{
-page-universities {
-
-.ion-seachbar{
-	padding-bottom: 2rem;
-}
+    padding-right: 0.8rem; 
 }
 }
