Revert ":atest Changes"
This reverts commit e0d958c307b0f43440cd94b88104ebc5aaf34fda.

--- a/src/pages/universities/universities.scss
+++ b/src/pages/universities/universities.scss
@@ -1,27 +1,13 @@
 page-universities {
-<<<<<<< HEAD
 .left{ 
     padding: 1rem 0 0 1rem ;
     float: left;
 }
-=======
-background: #eff0f1;
-
->>>>>>> parent of dc5f848... Revert "Anany's Latest Changes before upload"
 .lastRow{ 
     padding-bottom: 1rem; 
 }
 .title{ 
     font-weight: bold ; 
-    
-}
-}
-
-.ios{
-page-universities {
-
-.ion-seachbar{
-	padding-bottom: 2rem;
-}
+    padding-right: 0.8rem; 
 }
 }
